--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; powered by DeniShakh</span>
+						<span class="copyright">&copy; powered by HWS</span>
 					</footer>
 
 			</div>
